--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from demos.codexcoder.com/labartisan/html/maxino/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 08 Feb 2022 01:08:12 GMT -->
 
 <head>
-	<title>Maxino</title>
+	<title>Taz | Protfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Maxino is a personal portfolio HTML5 Maxino Template">
 	<meta name="keywords" content="Maxino, HTML5, portfolio, Template">
